# opinionator

./: README.md  pyproject.toml
src/: opinionator.py
src/opinionator/: __init__.py
src/opinionator/assets/haiku/: README.md
