[tool.poetry]
name = "opinionator"
version = "0.1.0"
description = "Blogging like it's 1995"
authors = ["nhanb"]
license = "GPL-3.0-only"

[tool.poetry.scripts]
opinionator = "opinionator:main"

[tool.poetry.dependencies]
python = "^3.9"
mistune = "2.0.0rc1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
